--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -20,6 +20,18 @@ library(tidyverse)
 library(ggplot2)
 ```
 
+# Problem 1
+
+1.  Imports the data in individual spreadsheets
+
+``` r
+full_df = 
+  tibble(
+    files = list.files("data/problem1_data/"),
+    path = str_c("data/problem1_data/", files)
+  ) 
+```
+
 # Problem 2
 
 ``` r
@@ -209,7 +221,7 @@ tidy_hypothesis_result_df = tidy_hypothesis_result_df %>%
 tidy_hypothesis_result_df
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 ``` r
   ggsave("./plots/Estimated_proportions_and_CIs_for_each_city.pdf",tidy_hypothesis_result_df, width = 8, height = 5)
@@ -241,27 +253,27 @@ Set mu=0, generate 5000 datasets from the model x∼Normal\[μ,σ\] and save
 mu_hat and p.value arising from a test of H:μ=0 α=0.05 using a for loop
 
 ``` r
-output = vector("list",length = 5000)
-for (i in 1:5000){
+output = vector("list",length = 50)
+for (i in 1:50){
   output[[i]] = sim_estimate_pvalue(30,0,5)
 }
 bind_rows(output)
 ```
 
-    ## # A tibble: 5,000 × 2
+    ## # A tibble: 50 × 2
     ##    mu_hat p_value
     ##     <dbl>   <dbl>
-    ##  1 -1.15   0.275 
-    ##  2 -1.64   0.0975
-    ##  3  1.08   0.193 
-    ##  4 -0.444  0.630 
-    ##  5 -0.428  0.596 
-    ##  6 -1.50   0.0905
-    ##  7  1.53   0.137 
-    ##  8 -0.378  0.705 
-    ##  9  1.13   0.209 
-    ## 10 -1.21   0.240 
-    ## # … with 4,990 more rows
+    ##  1  0.618  0.514 
+    ##  2  1.43   0.194 
+    ##  3 -2.00   0.0122
+    ##  4 -0.657  0.492 
+    ##  5  0.114  0.909 
+    ##  6  1.03   0.190 
+    ##  7 -0.751  0.471 
+    ##  8  0.406  0.693 
+    ##  9 -1.23   0.269 
+    ## 10 -1.62   0.101 
+    ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
 
@@ -270,7 +282,7 @@ sim_results = tibble(
   mu = c(1,2,3,4,5,6)
 ) %>% 
   mutate(
-    output_lists = map(.x = mu,~rerun(5000,sim_estimate_pvalue(30,.x,5))),
+    output_lists = map(.x = mu,~rerun(50,sim_estimate_pvalue(30,.x,5))),
     estimate_df = map(output_lists,bind_rows)
   ) %>% 
   select(-output_lists) %>% 
@@ -293,20 +305,20 @@ sim_results = sim_results %>%
 sim_results
 ```
 
-    ## # A tibble: 30,000 × 4
-    ##       mu  mu_hat p_value conclusion    
-    ##    <dbl>   <dbl>   <dbl> <chr>         
-    ##  1     1  2.17    0.0684 fail to reject
-    ##  2     1  0.204   0.842  fail to reject
-    ##  3     1 -0.0167  0.985  fail to reject
-    ##  4     1  0.657   0.431  fail to reject
-    ##  5     1  0.753   0.435  fail to reject
-    ##  6     1  0.972   0.325  fail to reject
-    ##  7     1 -0.0722  0.942  fail to reject
-    ##  8     1  0.799   0.424  fail to reject
-    ##  9     1  0.978   0.334  fail to reject
-    ## 10     1  0.417   0.611  fail to reject
-    ## # … with 29,990 more rows
+    ## # A tibble: 300 × 4
+    ##       mu mu_hat p_value conclusion    
+    ##    <dbl>  <dbl>   <dbl> <chr>         
+    ##  1     1  1.43    0.132 fail to reject
+    ##  2     1  1.11    0.179 fail to reject
+    ##  3     1 -0.344   0.655 fail to reject
+    ##  4     1 -0.913   0.293 fail to reject
+    ##  5     1  0.518   0.631 fail to reject
+    ##  6     1 -0.102   0.920 fail to reject
+    ##  7     1 -0.232   0.728 fail to reject
+    ##  8     1  0.784   0.339 fail to reject
+    ##  9     1  0.773   0.446 fail to reject
+    ## 10     1  1.19    0.117 fail to reject
+    ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
 
@@ -341,7 +353,7 @@ proportion_reject = sim_results %>%
 proportion_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 ``` r
  ggsave("./plots/The_association_between_effect_size_and_power.pdf",proportion_reject, width = 8, height = 5)
@@ -368,16 +380,16 @@ average_estimate_mu = sim_results %>%
   geom_point() +
   geom_line() +
   labs(
-    title = "Average estimate of mu_hat vs True value of mu",
+    title = "Average estimate of mu_hat vs True mu",
      x = "True mu",
      y = "The average estimate of mu_hat"
   ) +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "bottom")
 
 average_estimate_mu
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu.pdf",average_estimate_mu, width = 8, height = 5)
@@ -398,17 +410,27 @@ average_estimate_mu_reject = sim_results %>%
   geom_point() +
   geom_line() +
   labs(
-    title = "Average estimate of mu_hat vs True value of mu for 'rejected' samples",
+    title = "Average estimate of mu_hat vs True mu for 'rejected' samples",
      x = "True mu",
      y = "The average estimate of mu_hat"
   ) +
-  theme(plot.title = element_text(hjust = 0.5))
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "bottom")
   
 average_estimate_mu_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu_for_reject_samples.pdf",average_estimate_mu, width = 8, height = 5)
 ```
+
+Answer:
+
+1.  When the true value of mu is from 1 to 3, the sample average of
+    mu_hat across tests for which the null is rejected isn’t
+    approximately equal to the true value of mu
+
+2.  When the true value of mu is from 4 to 6, the sample average of
+    mu_hat across tests for which the null is rejected is approximately
+    equal to the true value of mu
