--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -24,6 +24,7 @@ library(ggplot2)
 
 1.  Imports the data in individual spreadsheets
 2.  Read all documents by path to obtain tibble
+3.  show tibbles in data column
 
 ``` r
 full_df = 
@@ -31,7 +32,8 @@ full_df =
     files = list.files("data/problem1_data/"),
     path = str_c("data/problem1_data/", files)
   ) %>% 
-  mutate(data = map(path, read_csv)) 
+  mutate(data = map(path, read_csv)) %>% 
+  unnest()
 ```
 
     ## Rows: 1 Columns: 8
@@ -174,6 +176,9 @@ full_df =
     ## 
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+    ## Warning: `cols` is now required when using unnest().
+    ## Please use `cols = c(data)`
 
 # Problem 2
 
@@ -406,16 +411,16 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##    mu_hat p_value
     ##     <dbl>   <dbl>
-    ##  1  0.690   0.389
-    ##  2  1.75    0.127
-    ##  3  1.54    0.148
-    ##  4  1.46    0.183
-    ##  5  1.01    0.243
-    ##  6  0.983   0.280
-    ##  7 -0.104   0.928
-    ##  8 -0.623   0.546
-    ##  9 -0.754   0.429
-    ## 10  0.407   0.697
+    ##  1 -0.522   0.612
+    ##  2  0.935   0.296
+    ##  3 -0.940   0.436
+    ##  4  1.04    0.312
+    ##  5 -0.798   0.336
+    ##  6 -0.763   0.359
+    ##  7  0.545   0.529
+    ##  8 -0.504   0.520
+    ##  9 -1.12    0.184
+    ## 10  1.01    0.274
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -449,18 +454,18 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu mu_hat p_value conclusion    
-    ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  1.60   0.144  fail to reject
-    ##  2     1  1.40   0.194  fail to reject
-    ##  3     1 -1.63   0.0324 reject        
-    ##  4     1 -0.405  0.694  fail to reject
-    ##  5     1  2.11   0.0203 reject        
-    ##  6     1  0.107  0.896  fail to reject
-    ##  7     1  1.55   0.111  fail to reject
-    ##  8     1  0.257  0.781  fail to reject
-    ##  9     1  0.331  0.759  fail to reject
-    ## 10     1  0.352  0.637  fail to reject
+    ##       mu  mu_hat  p_value conclusion    
+    ##    <dbl>   <dbl>    <dbl> <chr>         
+    ##  1     1  1.61   0.0851   fail to reject
+    ##  2     1  0.508  0.576    fail to reject
+    ##  3     1  0.464  0.493    fail to reject
+    ##  4     1 -0.809  0.383    fail to reject
+    ##  5     1  0.589  0.513    fail to reject
+    ##  6     1  0.0993 0.921    fail to reject
+    ##  7     1  1.52   0.181    fail to reject
+    ##  8     1  0.572  0.559    fail to reject
+    ##  9     1  1.39   0.145    fail to reject
+    ## 10     1  2.64   0.000840 reject        
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
