--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -13,7 +13,7 @@ library(ggplot2)
 
 1. Imports the data in individual spreadsheets
 2. Read all documents by path to obtain tibble
-3. show tibbles in data column
+3. Show tibbles in data column
 ```{r}
 full_df = 
   tibble(
@@ -23,6 +23,16 @@ full_df =
   mutate(data = map(path, read_csv)) %>% 
   unnest()
 ```
+
+1. Clean the data format
+```{r}
+tidy_df = 
+  full_df %>% 
+  mutate(
+    files = str_replace(files, ".csv", ""), # remove csv
+    group = str_sub(files, 1, 3)) # obtain the first three characters
+```
+
 
 # Problem 2
 
