--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -24,7 +24,7 @@ library(ggplot2)
 
 1.  Imports the data in individual spreadsheets
 2.  Read all documents by path to obtain tibble
-3.  show tibbles in data column
+3.  Show tibbles in data column
 
 ``` r
 full_df = 
@@ -179,6 +179,16 @@ full_df =
 
     ## Warning: `cols` is now required when using unnest().
     ## Please use `cols = c(data)`
+
+1.  Clean the data format
+
+``` r
+tidy_df = 
+  full_df %>% 
+  mutate(
+    files = str_replace(files, ".csv", ""), # remove csv
+    group = str_sub(files, 1, 3)) # obtain the first three characters
+```
 
 # Problem 2
 
@@ -369,7 +379,7 @@ tidy_hypothesis_result_df = tidy_hypothesis_result_df %>%
 tidy_hypothesis_result_df
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 ``` r
   ggsave("./plots/Estimated_proportions_and_CIs_for_each_city.pdf",tidy_hypothesis_result_df, width = 8, height = 5)
@@ -409,18 +419,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##    mu_hat p_value
-    ##     <dbl>   <dbl>
-    ##  1 -0.522   0.612
-    ##  2  0.935   0.296
-    ##  3 -0.940   0.436
-    ##  4  1.04    0.312
-    ##  5 -0.798   0.336
-    ##  6 -0.763   0.359
-    ##  7  0.545   0.529
-    ##  8 -0.504   0.520
-    ##  9 -1.12    0.184
-    ## 10  1.01    0.274
+    ##     mu_hat p_value
+    ##      <dbl>   <dbl>
+    ##  1 -0.909    0.292
+    ##  2  0.696    0.568
+    ##  3 -1.45     0.138
+    ##  4 -0.497    0.559
+    ##  5  0.0985   0.889
+    ##  6  0.0552   0.956
+    ##  7 -0.175    0.832
+    ##  8  0.275    0.795
+    ##  9  1.02     0.233
+    ## 10 -0.560    0.449
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -454,18 +464,18 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu  mu_hat  p_value conclusion    
-    ##    <dbl>   <dbl>    <dbl> <chr>         
-    ##  1     1  1.61   0.0851   fail to reject
-    ##  2     1  0.508  0.576    fail to reject
-    ##  3     1  0.464  0.493    fail to reject
-    ##  4     1 -0.809  0.383    fail to reject
-    ##  5     1  0.589  0.513    fail to reject
-    ##  6     1  0.0993 0.921    fail to reject
-    ##  7     1  1.52   0.181    fail to reject
-    ##  8     1  0.572  0.559    fail to reject
-    ##  9     1  1.39   0.145    fail to reject
-    ## 10     1  2.64   0.000840 reject        
+    ##       mu mu_hat p_value conclusion    
+    ##    <dbl>  <dbl>   <dbl> <chr>         
+    ##  1     1  1.93   0.0523 fail to reject
+    ##  2     1  2.43   0.0112 reject        
+    ##  3     1  0.139  0.863  fail to reject
+    ##  4     1  0.651  0.488  fail to reject
+    ##  5     1  1.22   0.190  fail to reject
+    ##  6     1  0.510  0.464  fail to reject
+    ##  7     1  0.469  0.589  fail to reject
+    ##  8     1  1.71   0.0711 fail to reject
+    ##  9     1  1.70   0.0490 reject        
+    ## 10     1  0.151  0.857  fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
@@ -501,7 +511,7 @@ proportion_reject = sim_results %>%
 proportion_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 ``` r
  ggsave("./plots/The_association_between_effect_size_and_power.pdf",proportion_reject, width = 8, height = 5)
@@ -537,7 +547,7 @@ average_estimate_mu = sim_results %>%
 average_estimate_mu
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu.pdf",average_estimate_mu, width = 8, height = 5)
@@ -567,7 +577,7 @@ average_estimate_mu_reject = sim_results %>%
 average_estimate_mu_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu_for_reject_samples.pdf",average_estimate_mu, width = 8, height = 5)
