--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -25,12 +25,19 @@ full_df =
 ```
 
 1. Clean the data format
+2. Make dataframe longer other than wider
 ```{r}
 tidy_df = 
   full_df %>% 
   mutate(
     files = str_replace(files, ".csv", ""), # remove csv
-    group = str_sub(files, 1, 3)) # obtain the first three characters
+    group = str_sub(files, 1, 3)) %>%  # obtain the first three characters
+    pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "outcome",
+    names_prefix = "week_") %>% 
+  mutate(week = as.numeric(week))
 ```
 
 
