--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -181,13 +181,20 @@ full_df =
     ## Please use `cols = c(data)`
 
 1.  Clean the data format
+2.  Make dataframe longer other than wider
 
 ``` r
 tidy_df = 
   full_df %>% 
   mutate(
     files = str_replace(files, ".csv", ""), # remove csv
-    group = str_sub(files, 1, 3)) # obtain the first three characters
+    group = str_sub(files, 1, 3)) %>%  # obtain the first three characters
+    pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    values_to = "outcome",
+    names_prefix = "week_") %>% 
+  mutate(week = as.numeric(week))
 ```
 
 # Problem 2
@@ -419,18 +426,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##     mu_hat p_value
-    ##      <dbl>   <dbl>
-    ##  1 -0.909    0.292
-    ##  2  0.696    0.568
-    ##  3 -1.45     0.138
-    ##  4 -0.497    0.559
-    ##  5  0.0985   0.889
-    ##  6  0.0552   0.956
-    ##  7 -0.175    0.832
-    ##  8  0.275    0.795
-    ##  9  1.02     0.233
-    ## 10 -0.560    0.449
+    ##    mu_hat p_value
+    ##     <dbl>   <dbl>
+    ##  1 -0.493  0.690 
+    ##  2 -1.69   0.119 
+    ##  3  0.700  0.466 
+    ##  4  0.411  0.677 
+    ##  5  1.49   0.120 
+    ##  6 -2.32   0.0459
+    ##  7  1.30   0.212 
+    ##  8  0.733  0.414 
+    ##  9  0.366  0.691 
+    ## 10  0.709  0.399 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -466,16 +473,16 @@ sim_results
     ## # A tibble: 300 × 4
     ##       mu mu_hat p_value conclusion    
     ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  1.93   0.0523 fail to reject
-    ##  2     1  2.43   0.0112 reject        
-    ##  3     1  0.139  0.863  fail to reject
-    ##  4     1  0.651  0.488  fail to reject
-    ##  5     1  1.22   0.190  fail to reject
-    ##  6     1  0.510  0.464  fail to reject
-    ##  7     1  0.469  0.589  fail to reject
-    ##  8     1  1.71   0.0711 fail to reject
-    ##  9     1  1.70   0.0490 reject        
-    ## 10     1  0.151  0.857  fail to reject
+    ##  1     1  1.37  0.118   fail to reject
+    ##  2     1  0.507 0.631   fail to reject
+    ##  3     1 -0.665 0.480   fail to reject
+    ##  4     1  1.33  0.195   fail to reject
+    ##  5     1 -0.439 0.643   fail to reject
+    ##  6     1 -0.832 0.269   fail to reject
+    ##  7     1  0.570 0.625   fail to reject
+    ##  8     1  2.49  0.0112  reject        
+    ##  9     1  1.10  0.224   fail to reject
+    ## 10     1  3.33  0.00186 reject        
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
