Remove unnessary columns

--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -26,6 +26,7 @@ full_df =
 
 1. Clean the data format
 2. Make dataframe longer other than wider
+3. Remove unnessary columns
 ```{r}
 tidy_df = 
   full_df %>% 
@@ -37,7 +38,8 @@ tidy_df =
     names_to = "week",
     values_to = "outcome",
     names_prefix = "week_") %>% 
-  mutate(week = as.numeric(week))
+  mutate(week = as.numeric(week)) %>% 
+  select(-path) # remove path
 ```
 
 
