--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -182,6 +182,7 @@ full_df =
 
 1.  Clean the data format
 2.  Make dataframe longer other than wider
+3.  Remove unnessary columns
 
 ``` r
 tidy_df = 
@@ -194,7 +195,8 @@ tidy_df =
     names_to = "week",
     values_to = "outcome",
     names_prefix = "week_") %>% 
-  mutate(week = as.numeric(week))
+  mutate(week = as.numeric(week)) %>% 
+  select(-path) # remove path
 ```
 
 # Problem 2
@@ -426,18 +428,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##    mu_hat p_value
-    ##     <dbl>   <dbl>
-    ##  1 -0.493  0.690 
-    ##  2 -1.69   0.119 
-    ##  3  0.700  0.466 
-    ##  4  0.411  0.677 
-    ##  5  1.49   0.120 
-    ##  6 -2.32   0.0459
-    ##  7  1.30   0.212 
-    ##  8  0.733  0.414 
-    ##  9  0.366  0.691 
-    ## 10  0.709  0.399 
+    ##     mu_hat p_value
+    ##      <dbl>   <dbl>
+    ##  1  0.132   0.900 
+    ##  2 -1.31    0.0999
+    ##  3 -0.458   0.656 
+    ##  4  1.64    0.0584
+    ##  5 -0.802   0.396 
+    ##  6 -0.528   0.603 
+    ##  7 -2.29    0.0338
+    ##  8 -0.886   0.290 
+    ##  9  0.920   0.246 
+    ## 10 -0.0127  0.990 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -471,18 +473,18 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu mu_hat p_value conclusion    
-    ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  1.37  0.118   fail to reject
-    ##  2     1  0.507 0.631   fail to reject
-    ##  3     1 -0.665 0.480   fail to reject
-    ##  4     1  1.33  0.195   fail to reject
-    ##  5     1 -0.439 0.643   fail to reject
-    ##  6     1 -0.832 0.269   fail to reject
-    ##  7     1  0.570 0.625   fail to reject
-    ##  8     1  2.49  0.0112  reject        
-    ##  9     1  1.10  0.224   fail to reject
-    ## 10     1  3.33  0.00186 reject        
+    ##       mu  mu_hat p_value conclusion    
+    ##    <dbl>   <dbl>   <dbl> <chr>         
+    ##  1     1  1.17    0.140  fail to reject
+    ##  2     1  0.863   0.332  fail to reject
+    ##  3     1  0.723   0.498  fail to reject
+    ##  4     1  0.354   0.709  fail to reject
+    ##  5     1  0.929   0.329  fail to reject
+    ##  6     1  1.29    0.192  fail to reject
+    ##  7     1 -0.0417  0.962  fail to reject
+    ##  8     1  1.54    0.107  fail to reject
+    ##  9     1  0.484   0.595  fail to reject
+    ## 10     1  1.61    0.0832 fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
