Make a plot showing each group

--- a/p8105_hw5_zc2610.Rmd
+++ b/p8105_hw5_zc2610.Rmd
@@ -42,6 +42,17 @@ tidy_df =
   select(-path) # remove path
 ```
 
+Make a plot showing each group
+
+```{r}
+tidy_df %>% 
+  ggplot(aes(x = week, y = outcome, color = group)) + 
+  geom_point() + 
+  geom_path() + 
+  facet_grid(~group)
+```
+
+
 
 # Problem 2
 
