--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -199,6 +199,18 @@ tidy_df =
   select(-path) # remove path
 ```
 
+Make a plot showing each group
+
+``` r
+tidy_df %>% 
+  ggplot(aes(x = week, y = outcome, color = group)) + 
+  geom_point() + 
+  geom_path() + 
+  facet_grid(~group)
+```
+
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+
 # Problem 2
 
 ``` r
@@ -388,7 +400,7 @@ tidy_hypothesis_result_df = tidy_hypothesis_result_df %>%
 tidy_hypothesis_result_df
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ``` r
   ggsave("./plots/Estimated_proportions_and_CIs_for_each_city.pdf",tidy_hypothesis_result_df, width = 8, height = 5)
@@ -428,18 +440,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##     mu_hat p_value
-    ##      <dbl>   <dbl>
-    ##  1  0.132   0.900 
-    ##  2 -1.31    0.0999
-    ##  3 -0.458   0.656 
-    ##  4  1.64    0.0584
-    ##  5 -0.802   0.396 
-    ##  6 -0.528   0.603 
-    ##  7 -2.29    0.0338
-    ##  8 -0.886   0.290 
-    ##  9  0.920   0.246 
-    ## 10 -0.0127  0.990 
+    ##    mu_hat p_value
+    ##     <dbl>   <dbl>
+    ##  1  0.869  0.372 
+    ##  2  1.56   0.0195
+    ##  3  1.20   0.221 
+    ##  4 -0.415  0.634 
+    ##  5  1.17   0.166 
+    ##  6 -1.03   0.275 
+    ##  7 -1.19   0.135 
+    ##  8  0.648  0.409 
+    ##  9  0.577  0.433 
+    ## 10  0.842  0.240 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -473,18 +485,18 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu  mu_hat p_value conclusion    
-    ##    <dbl>   <dbl>   <dbl> <chr>         
-    ##  1     1  1.17    0.140  fail to reject
-    ##  2     1  0.863   0.332  fail to reject
-    ##  3     1  0.723   0.498  fail to reject
-    ##  4     1  0.354   0.709  fail to reject
-    ##  5     1  0.929   0.329  fail to reject
-    ##  6     1  1.29    0.192  fail to reject
-    ##  7     1 -0.0417  0.962  fail to reject
-    ##  8     1  1.54    0.107  fail to reject
-    ##  9     1  0.484   0.595  fail to reject
-    ## 10     1  1.61    0.0832 fail to reject
+    ##       mu mu_hat p_value conclusion    
+    ##    <dbl>  <dbl>   <dbl> <chr>         
+    ##  1     1  0.657  0.445  fail to reject
+    ##  2     1  1.06   0.234  fail to reject
+    ##  3     1  0.919  0.279  fail to reject
+    ##  4     1  2.40   0.0177 reject        
+    ##  5     1  1.16   0.128  fail to reject
+    ##  6     1  0.234  0.800  fail to reject
+    ##  7     1  0.463  0.682  fail to reject
+    ##  8     1  0.737  0.460  fail to reject
+    ##  9     1  0.965  0.186  fail to reject
+    ## 10     1 -0.262  0.825  fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
@@ -520,7 +532,7 @@ proportion_reject = sim_results %>%
 proportion_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 ``` r
  ggsave("./plots/The_association_between_effect_size_and_power.pdf",proportion_reject, width = 8, height = 5)
@@ -556,7 +568,7 @@ average_estimate_mu = sim_results %>%
 average_estimate_mu
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu.pdf",average_estimate_mu, width = 8, height = 5)
@@ -586,7 +598,7 @@ average_estimate_mu_reject = sim_results %>%
 average_estimate_mu_reject
 ```
 
-![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
+![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-18-1.png)<!-- -->
 
 ``` r
 ggsave("./plots/Average_estimate_of_mu_hat_vs_True_value_of_mu_for_reject_samples.pdf",average_estimate_mu, width = 8, height = 5)
