--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -211,6 +211,14 @@ tidy_df %>%
 
 ![](p8105_hw5_zc2610_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
 
+Comments:
+
+This plot suggests high within-files correlation – files who start above
+average end up above average, and those that start below average end up
+below average. files in the control group generally don’t change over
+time, but those in the experiment group increase their outcome in a
+roughly linear way.
+
 # Problem 2
 
 ``` r
@@ -440,18 +448,18 @@ bind_rows(output)
 ```
 
     ## # A tibble: 50 × 2
-    ##    mu_hat p_value
-    ##     <dbl>   <dbl>
-    ##  1  0.869  0.372 
-    ##  2  1.56   0.0195
-    ##  3  1.20   0.221 
-    ##  4 -0.415  0.634 
-    ##  5  1.17   0.166 
-    ##  6 -1.03   0.275 
-    ##  7 -1.19   0.135 
-    ##  8  0.648  0.409 
-    ##  9  0.577  0.433 
-    ## 10  0.842  0.240 
+    ##     mu_hat p_value
+    ##      <dbl>   <dbl>
+    ##  1 -1.53    0.0383
+    ##  2 -1.97    0.0522
+    ##  3  1.04    0.228 
+    ##  4  1.54    0.0920
+    ##  5  0.799   0.400 
+    ##  6 -0.0281  0.975 
+    ##  7  0.258   0.785 
+    ##  8  0.867   0.277 
+    ##  9  0.453   0.654 
+    ## 10  0.576   0.610 
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -487,16 +495,16 @@ sim_results
     ## # A tibble: 300 × 4
     ##       mu mu_hat p_value conclusion    
     ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  0.657  0.445  fail to reject
-    ##  2     1  1.06   0.234  fail to reject
-    ##  3     1  0.919  0.279  fail to reject
-    ##  4     1  2.40   0.0177 reject        
-    ##  5     1  1.16   0.128  fail to reject
-    ##  6     1  0.234  0.800  fail to reject
-    ##  7     1  0.463  0.682  fail to reject
-    ##  8     1  0.737  0.460  fail to reject
-    ##  9     1  0.965  0.186  fail to reject
-    ## 10     1 -0.262  0.825  fail to reject
+    ##  1     1  0.298  0.765  fail to reject
+    ##  2     1  0.425  0.638  fail to reject
+    ##  3     1  0.728  0.394  fail to reject
+    ##  4     1  1.67   0.0643 fail to reject
+    ##  5     1  1.77   0.107  fail to reject
+    ##  6     1  0.472  0.666  fail to reject
+    ##  7     1  0.147  0.834  fail to reject
+    ##  8     1  2.24   0.0114 reject        
+    ##  9     1 -0.539  0.577  fail to reject
+    ## 10     1  1.34   0.274  fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
