--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -331,7 +331,9 @@ result_df %>%
 
 1.  Estimate the proportion of homicides that are unsolved in each city
 
-2.  Tidy hypothesis outputs of the dataframe
+2.  Tidy hypothesis outputs of the dataframe (Remove “Tulsa,AL” before
+    making hypothesis test since there is no unsolved homicides in this
+    city therefore CI and proportion don’t need to be estimated )
 
 3.  Create a new dataframe containing variables in num_of_homicide_df
     dataframe and two new variables: City_unsolved_homicide and
@@ -339,9 +341,11 @@ result_df %>%
     outputs
 
 4.  Create a tidy dataframe with estimated proportions and CIs for each
-    cit
+    city
 
 ``` r
+num_of_homicide_df = num_of_homicide_df %>% 
+  filter(city_state != "Tulsa,AL")
   x = num_of_homicide_df %>%
   pull(homicide_unsolved) 
   n = num_of_homicide_df %>% 
@@ -353,11 +357,6 @@ result_df %>%
       Tidy_city_unsolved_homicide = map(City_unsolved_homicide, broom::tidy)
     ) %>% 
     select(city_state,Tidy_city_unsolved_homicide)
-```
-
-    ## Warning in .f(.x[[i]], .y[[i]], ...): Chi-squared approximation may be incorrect
-
-``` r
     tidy_hypothesis_result_df = unnest(hypothesis_result_df) %>% 
     select(city_state,estimate,conf.low,conf.high)
 ```
@@ -369,7 +368,7 @@ result_df %>%
     tidy_hypothesis_result_df
 ```
 
-    ## # A tibble: 51 × 4
+    ## # A tibble: 50 × 4
     ##    city_state     estimate conf.low conf.high
     ##    <chr>             <dbl>    <dbl>     <dbl>
     ##  1 Albuquerque,NM    0.386    0.337     0.438
@@ -382,7 +381,7 @@ result_df %>%
     ##  8 Charlotte,NC      0.300    0.266     0.336
     ##  9 Chicago,IL        0.736    0.724     0.747
     ## 10 Cincinnati,OH     0.445    0.408     0.483
-    ## # … with 41 more rows
+    ## # … with 40 more rows
 
 1.  Create a plot that shows the estimates and CIs for each city
 
@@ -450,16 +449,16 @@ bind_rows(output)
     ## # A tibble: 50 × 2
     ##     mu_hat p_value
     ##      <dbl>   <dbl>
-    ##  1 -1.53    0.0383
-    ##  2 -1.97    0.0522
-    ##  3  1.04    0.228 
-    ##  4  1.54    0.0920
-    ##  5  0.799   0.400 
-    ##  6 -0.0281  0.975 
-    ##  7  0.258   0.785 
-    ##  8  0.867   0.277 
-    ##  9  0.453   0.654 
-    ## 10  0.576   0.610 
+    ##  1 -0.720  0.413  
+    ##  2 -0.179  0.846  
+    ##  3 -0.866  0.260  
+    ##  4  2.11   0.00823
+    ##  5  0.764  0.264  
+    ##  6  0.380  0.650  
+    ##  7 -0.954  0.301  
+    ##  8 -0.795  0.341  
+    ##  9  0.164  0.869  
+    ## 10  0.0367 0.965  
     ## # … with 40 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
@@ -493,18 +492,18 @@ sim_results
 ```
 
     ## # A tibble: 300 × 4
-    ##       mu mu_hat p_value conclusion    
-    ##    <dbl>  <dbl>   <dbl> <chr>         
-    ##  1     1  0.298  0.765  fail to reject
-    ##  2     1  0.425  0.638  fail to reject
-    ##  3     1  0.728  0.394  fail to reject
-    ##  4     1  1.67   0.0643 fail to reject
-    ##  5     1  1.77   0.107  fail to reject
-    ##  6     1  0.472  0.666  fail to reject
-    ##  7     1  0.147  0.834  fail to reject
-    ##  8     1  2.24   0.0114 reject        
-    ##  9     1 -0.539  0.577  fail to reject
-    ## 10     1  1.34   0.274  fail to reject
+    ##       mu mu_hat    p_value conclusion    
+    ##    <dbl>  <dbl>      <dbl> <chr>         
+    ##  1     1  2.02  0.0674     fail to reject
+    ##  2     1  3.63  0.00000494 reject        
+    ##  3     1  0.400 0.646      fail to reject
+    ##  4     1  0.190 0.821      fail to reject
+    ##  5     1  2.07  0.0218     reject        
+    ##  6     1 -0.728 0.375      fail to reject
+    ##  7     1  0.994 0.289      fail to reject
+    ##  8     1  1.44  0.107      fail to reject
+    ##  9     1  1.92  0.0102     reject        
+    ## 10     1 -0.287 0.795      fail to reject
     ## # … with 290 more rows
 
 1.  Count the number of total conclusions with each true mu
