--- a/p8105_hw5_zc2610.md
+++ b/p8105_hw5_zc2610.md
@@ -439,27 +439,27 @@ Set mu=0, generate 5000 datasets from the model x∼Normal\[μ,σ\] and save
 mu_hat and p.value arising from a test of H:μ=0 α=0.05 using a for loop
 
 ``` r
-output = vector("list",length = 50)
-for (i in 1:50){
+output = vector("list",length = 5000)
+for (i in 1:5000){
   output[[i]] = sim_estimate_pvalue(30,0,5)
 }
 bind_rows(output)
 ```
 
-    ## # A tibble: 50 × 2
-    ##     mu_hat p_value
-    ##      <dbl>   <dbl>
-    ##  1 -0.720  0.413  
-    ##  2 -0.179  0.846  
-    ##  3 -0.866  0.260  
-    ##  4  2.11   0.00823
-    ##  5  0.764  0.264  
-    ##  6  0.380  0.650  
-    ##  7 -0.954  0.301  
-    ##  8 -0.795  0.341  
-    ##  9  0.164  0.869  
-    ## 10  0.0367 0.965  
-    ## # … with 40 more rows
+    ## # A tibble: 5,000 × 2
+    ##    mu_hat p_value
+    ##     <dbl>   <dbl>
+    ##  1  0.608   0.477
+    ##  2 -0.313   0.776
+    ##  3  0.472   0.568
+    ##  4  0.162   0.793
+    ##  5 -0.472   0.633
+    ##  6 -0.266   0.783
+    ##  7  0.774   0.470
+    ##  8  0.906   0.284
+    ##  9  0.181   0.856
+    ## 10  0.693   0.473
+    ## # … with 4,990 more rows
 
 Repeat the above for mu={1,2,3,4,5,6}
 
@@ -468,7 +468,7 @@ sim_results = tibble(
   mu = c(1,2,3,4,5,6)
 ) %>% 
   mutate(
-    output_lists = map(.x = mu,~rerun(50,sim_estimate_pvalue(30,.x,5))),
+    output_lists = map(.x = mu,~rerun(5000,sim_estimate_pvalue(30,.x,5))),
     estimate_df = map(output_lists,bind_rows)
   ) %>% 
   select(-output_lists) %>% 
@@ -491,20 +491,20 @@ sim_results = sim_results %>%
 sim_results
 ```
 
-    ## # A tibble: 300 × 4
-    ##       mu mu_hat    p_value conclusion    
-    ##    <dbl>  <dbl>      <dbl> <chr>         
-    ##  1     1  2.02  0.0674     fail to reject
-    ##  2     1  3.63  0.00000494 reject        
-    ##  3     1  0.400 0.646      fail to reject
-    ##  4     1  0.190 0.821      fail to reject
-    ##  5     1  2.07  0.0218     reject        
-    ##  6     1 -0.728 0.375      fail to reject
-    ##  7     1  0.994 0.289      fail to reject
-    ##  8     1  1.44  0.107      fail to reject
-    ##  9     1  1.92  0.0102     reject        
-    ## 10     1 -0.287 0.795      fail to reject
-    ## # … with 290 more rows
+    ## # A tibble: 30,000 × 4
+    ##       mu   mu_hat p_value conclusion    
+    ##    <dbl>    <dbl>   <dbl> <chr>         
+    ##  1     1  2.35    0.0343  reject        
+    ##  2     1  0.00302 0.998   fail to reject
+    ##  3     1 -0.213   0.765   fail to reject
+    ##  4     1  0.480   0.564   fail to reject
+    ##  5     1  0.425   0.584   fail to reject
+    ##  6     1  0.293   0.711   fail to reject
+    ##  7     1 -0.263   0.748   fail to reject
+    ##  8     1  0.678   0.531   fail to reject
+    ##  9     1  2.80    0.00349 reject        
+    ## 10     1  0.923   0.419   fail to reject
+    ## # … with 29,990 more rows
 
 1.  Count the number of total conclusions with each true mu
 
@@ -620,3 +620,8 @@ Answer:
 2.  When the true value of mu is from 4 to 6, the sample average of
     mu_hat across tests for which the null is rejected is approximately
     equal to the true value of mu
+
+3.  The reason is that for random variables, if they are far away from
+    mu = 0, they are more likely to be in the rejected area. If so, the
+    average estimate of mu_hat will be closer to the true mu for
+    “rejected” samples.
